# my-nipype-pipelines

./: README.md  setup.cfg
my_nipype_pipelines/first_level/: __init__.py  interfaces.py  utils.py  workflows.py
notebooks/: demo_run_spm_loki1_sub-811_ses-02.ipynb
