[metadata]
name = my_nipype_pipelines
author = Javier Rasero
author_email = jrasero.daparte@gmail.com
version = 0.0.0
description = A package with several nipype pipelines for future use
url = https://github.com/jrasero/my-nipype-pipelines

[options]
packages = find:
install_requires = pandas; nipype; nilearn


